fix NPOT shadows

a) fixes the texture offset calculation
b) arranges he shadow pixmaps as border in the texture to avoid interpolation issues.

BUG: 280116
BUG: 282882
CCBUG: 291161
BUG: 293325
REVIEW: 103888